force-app/main/default/objects/Operation__c.object
<CustomObject>
    <description>The list of QA/QC sheet to check each of equipment by Functional location.</description>
    <fields>
        <fullName>Control_Key__c</fullName>
        <label>Control Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Work_Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Main Work Center</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select a Master Map record of type: Main Work Center</errorMessage>
            <filterItems>
                <field>Master_Map__c.Type__c</field>
                <operation>equals</operation>
                <value>Main Work Center</value>
            </filterItems>
            <infoMessage>Select a Master Map record of type: Main Work Center</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Operations</relationshipLabel>
        <relationshipName>Operations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OperationKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>OperationKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <label>Operation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Operations</relationshipLabel>
        <relationshipName>Operations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plant</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Master_Map__c.Type__c</field>
                <operation>equals</operation>
                <value>Plant</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Operations (Plant)</relationshipLabel>
        <relationshipName>Operations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Short_Text__c</fullName>
        <label>Operation Short Text</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Operation__c</fullName>
        <label>Sub Operation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <label>description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>groupCount__c</fullName>
        <label>groupCount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>superiorOpNode__c</fullName>
        <label>superiorOpNode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tGroup__c</fullName>
        <label>tGroup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>taskListType__c</fullName>
        <label>taskListType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Operation</label>
    <nameField>
        <displayFormat>Op-{0000}</displayFormat>
        <label>Operation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>